--- a/FreeRuler/Base.lproj/MainMenu.xib
+++ b/FreeRuler/Base.lproj/MainMenu.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8187.4" systemVersion="15B17c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8187.4"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -669,18 +671,18 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="Horizontal Ruler" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hasShadow="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" animationBehavior="default" id="cNN-s7-5Kj" customClass="RulerWindow" customModule="FreeRuler" customModuleProvider="target">
+        <window title="Horizontal Ruler" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hasShadow="NO" releasedWhenClosed="NO" animationBehavior="default" id="cNN-s7-5Kj" customClass="RulerWindow" customModule="FreeRuler" customModuleProvider="target">
             <windowStyleMask key="styleMask" closable="YES" resizable="YES" fullSizeContentView="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES"/>
             <rect key="contentRect" x="72" y="779" width="400" height="50"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
             <view key="contentView" id="sUr-AB-Zv1" customClass="RulerView" customModule="FreeRuler" customModuleProvider="target">
                 <rect key="frame" x="0.0" y="0.0" width="400" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jWx-xn-a0W">
                         <rect key="frame" x="0.0" y="30" width="20" height="20"/>
-                        <animations/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSStopProgressTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="fhT-f2-QUO">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -690,25 +692,30 @@
                         </connections>
                     </button>
                 </subviews>
-                <animations/>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="number" keyPath="rulerOrientation">
+                        <integer key="value" value="0"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </view>
             <connections>
                 <outlet property="delegate" destination="Voe-Tx-rLC" id="Ofb-vY-bx0"/>
+                <outlet property="rulerView" destination="sUr-AB-Zv1" id="Bxk-Rz-IyA"/>
             </connections>
             <point key="canvasLocation" x="371" y="73"/>
         </window>
-        <window title="Vertical Ruler" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hasShadow="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" animationBehavior="default" id="prS-BO-IfD" customClass="RulerWindow" customModule="FreeRuler" customModuleProvider="target">
+        <window title="Vertical Ruler" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hasShadow="NO" releasedWhenClosed="NO" animationBehavior="default" id="prS-BO-IfD" customClass="RulerWindow" customModule="FreeRuler" customModuleProvider="target">
             <windowStyleMask key="styleMask" closable="YES" resizable="YES" fullSizeContentView="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES"/>
             <rect key="contentRect" x="167" y="496" width="50" height="400"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
             <view key="contentView" id="BpO-dg-iiz" customClass="RulerView" customModule="FreeRuler" customModuleProvider="target">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="400"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cEK-B6-9Dq">
                         <rect key="frame" x="0.0" y="380" width="20" height="20"/>
-                        <animations/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSStopProgressTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="cu3-HF-z5W">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -718,10 +725,15 @@
                         </connections>
                     </button>
                 </subviews>
-                <animations/>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="number" keyPath="rulerOrientation">
+                        <integer key="value" value="1"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </view>
             <connections>
                 <outlet property="delegate" destination="Voe-Tx-rLC" id="3Ge-cH-e7i"/>
+                <outlet property="rulerView" destination="BpO-dg-iiz" id="dm4-zX-r1L"/>
             </connections>
             <point key="canvasLocation" x="196" y="403"/>
         </window>
